--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.task">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,8 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskDemo"
         tools:targetApi="31">
+        <activity android:name=".MainActivity"
+            android:exported="false"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".CustomLayout"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,5 +27,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
