--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
     implementation "androidx.fragment:fragment-ktx:1.5.6"
+    //Image loading
+    implementation 'io.coil-kt:coil:1.4.0'
 }
 // Allow references to generated code
 kapt {
