--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     def retrofit_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    // OkHttp BOM
+    //implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.3"))
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3"
     // Lifecycle
     def lifecycle_version = "2.5.1"
@@ -73,6 +75,10 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.5.6"
     //Image loading
     implementation 'io.coil-kt:coil:1.4.0'
+    //chucker
+    debugImplementation "com.github.chuckerteam.chucker:library:3.5.2"
+    releaseImplementation "com.github.chuckerteam.chucker:library-no-op:3.5.2"
+
 }
 // Allow references to generated code
 kapt {
