--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ dependencies {
     //firebase messenger
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
 // Allow references to generated code
 kapt {
